Fixed FAQ page and added a dark mode toggle

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,8 @@
 :root {
     --mkwii: #28acf3;
+} .darkmode-background {
+    background-image: url(/img/checkerboard-white.png) !important;
 } body {
-    background-image: url(/img/checkerboard-white.png);
     font-family: Verdana, Arial, sans-serif;
     margin-left: auto;
     margin-top: 1em;
@@ -17,7 +18,7 @@
 } .top {
     background: radial-gradient(var(--mkwii) 0%, #28acf300 40%);
     border-bottom: 3px solid var(--mkwii)
-} h1 {
+} h1, h2, h3, h4, h5, h6 {
     color: #FFF;
     text-align: center;
     text-shadow:2px 0 0 var(--mkwii),-2px 0 0 var(--mkwii),0 2px 0 var(--mkwii),0 -2px 0 var(--mkwii),1px 1px var(--mkwii),-1px -1px 0 var(--mkwii),1px -1px 0 var(--mkwii),-1px 1px 0 var(--mkwii)
